# adapto_lite

./: build.gradle  local.properties
app/: build.gradle
app/release/: app-release v_1.02 .apk  output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ble_eth.c  ble_eth.h  ble_tcp.c  ble_tcp.h  bt_drv.c  bt_drv.c1  bt_drv.h  eth_mem.c  eth_mem.h  eth_nat.c  eth_nat.h  eth_queue.c  eth_queue.h  eth_router.c  eth_router.h  eth_router_cfg.h  settings.c  settings.h  xlib.c  xlib.h
app/src/main/cpp/lwip/: dhcp_server.c  dhcp_server.h  dhcpserver_options.h  dnsproxy.c  dnsproxy.h  eth_router_if_lwip.c  eth_router_if_lwip.h  lwip.c  lwip.h  lwipopts.h  lwippools.h  mdns.c  net_raw.c  net_raw.h  net_topology.c  net_topology.h  tcpip.c
app/src/main/cpp/lwip/api/: tcpip.c
app/src/main/cpp/lwip/include/arch/: cc.h
app/src/main/cpp/lwip/include/lwip/: dhcp.h  err.h  sockets.h  sys.h
app/src/main/cpp/lwip/include/lwip/apps/: httpd_opts.h
app/src/main/java/ua/cn/stu/navigation/: ComposeActivity.kt  MainActivity.kt  Options.kt  TerminalViewModel.kt
app/src/main/res/anim/: my_rotator.xml  rotator.xml
app/src/main/res/drawable/: ic_baseline_arrow_back_ios_24.xml  ic_circle_add.xml  ic_dec.xml  ic_navigate_next.xml  ic_send.xml  ic_top_bar.xml
app/src/main/res/drawable-hdpi/: ic_top_bar_profile_settings.xml  rectangle_bg.xml  switch_thumb.xml  switch_truck.xml
app/src/main/res/drawable-v24/: andex_alert_dialog_et_background_selector2.xml
app/src/main/res/drawable-xxhdpi/: andex_alert_dialog_et_background_selector.xml  ic_drawing.xml  massage_type_1_bg.xml  massage_type_2_bg.xml  massage_type_3_bg.xml  thumb_invisible.xml  track_full.xml  track_low.xml  track_mid.xml
app/src/main/res/layout/: activity_main.xml  dialog_active_boluses.xml  dialog_battery.xml  dialog_delete_active_boluses.xml  dialog_delete_profile_basal.xml  dialog_disconnection.xml  dialog_enter_app_pin.xml  dialog_enter_pin.xml  dialog_enter_settings_pin.xml  dialog_refill.xml  dialog_rename_profile_basal.xml  dialog_select_profile_basal.xml  dialog_speed_period_basal.xml  dialog_time_period_basal.xml  fragment_bms.xml  fragment_bolus.xml  fragment_debug.xml  fragment_dual_pattern_bolus.xml  fragment_extended_bolus.xml  fragment_home.xml  fragment_menu.xml  fragment_pin.xml  fragment_profile_settings.xml  fragment_profiles.xml  fragment_refilled.xml  fragment_refilling.xml  fragment_scanning.xml  fragment_settings.xml  fragment_statistic.xml  fragment_step_bolus.xml  fragment_super_bolus.xml  fragment_temporary_basal.xml  fragment_terminal.xml  item_chat.xml  item_period_profile.xml  item_profile.xml  item_scan.xml
app/src/main/res/layout-v26/: dialog_enter_pump_pin.xml  dialog_go_bolus.xml  dialog_info.xml  dialog_info_basal.xml  dialog_instruction_refilling.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+51 files in other folders)
